--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "@material-ui/icons": "^4.5.1",
     "antd": "^3.26.0",
     "axios": "^0.19.0",
+    "customize-cra": "^0.9.1",
     "mobx": "^5.15.0",
     "mobx-react": "^6.1.4",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
+    "react-app-rewired": "^2.1.5",
     "react-dom": "^16.12.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
@@ -18,7 +20,7 @@
     "wangeditor": "^3.1.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-app-rewired start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -37,5 +39,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.7.4",
+    "metro-react-native-babel-preset": "^0.56.4"
   }
 }
