--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.7.4",
+    "@types/react-router-dom": "^5.1.3",
     "metro-react-native-babel-preset": "^0.56.4"
   }
 }
